# aigc-py

./: .env.example  README.md  pyproject.toml
app/: server.py
app/config/: config.py  constants.py  dependencies.py  jwt.py
app/core/datasets/: datasets_model.py
app/logger/: logger.py
app/middleware/: auth_middleware.py  jwt_middleware.py  trace_middleware.py
app/models/: assistants.py  base.py  data_annotation.py  dataset_sample.py  datasets.py
app/protocol/: annotation_protocol.py  api_protocol.py  assistants_protocol.py  chat_protocol.py  data_annotation_protocol.py  datasets_protocol.py
app/repository/: data_annotation.py  dataset_segments.py  datasets.py  repository.py
app/routes/: assistants.py  chat.py  data_annotation.py  datasets.py  models.py
